<resources>
    <string name="app_name">Trivia</string>
    <string name="title">Trivia</string>
    <string name="falsetitle">False</string>
    <string name="truetitel">True</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="questioncountertext">out of</string>
    <string name="initialmessage">Getting Questions</string>
    <string name="Initalcounter">0 Questions out of 100</string>
    <string name="counterMessage">" out of "</string>
    <string name="your_current_score">Your current score</string>
    <string name="high_score">High Score</string>
</resources>
